--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "vanilla-app-template",
+  "name": "goit-js-hw-11",
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://Mariiamor.github.io/goit-js-hw-11/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "build": "vite build --base=/goit-js-hw-11/",
     "preview": "vite preview"
   },
   "devDependencies": {
